--- a/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/search/sort/sort.html
+++ b/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/search/sort/sort.html
@@ -20,39 +20,42 @@
 	 data-sly-use.placeholderTemplate="core/wcm/components/commons/v1/templates.html"
 	 data-sly-test.ready="${predicate.ready}">
 
-	<div class="ui dropdown">
-		<input
-				type="hidden"
-				name="orderby"
-				form="${predicate.formId}"
-				data-asset-share-id="sort"
-				data-asset-share-search-actions="all"
-				data-asset-share-search-on="${predicate.autoSearch ? 'change' : ''}"
-				data-sly-list.item="${predicate.items}"/>
-		<i class="dropdown icon"></i>
-		<div class="text">${properties['orderByLabel']}</div>
-		<div class="menu"
-			 data-sly-list.item="${predicate.items}">
-			<div class="item" data-value="${item.value}">${item.text}</div>
-		</div>
-	</div>
+	<label for="${predicate.id}__order-by">${properties['orderByLabel']}</label>
 
-	<div class="ui dropdown">
-		<input
-				type="hidden"
-				name="orderby.sort"
-				form="${predicate.formId}"
-				data-asset-share-id="sort"
-				data-asset-share-search-actions="all"
-				data-asset-share-search-on="${predicate.autoSearch ? 'change' : ''}"
-				data-sly-list.item="${predicate.items}"/>
-		<i class="dropdown icon"></i>
-		<div class="text">${properties['orderBySortLabel']}</div>
-		<div class="menu">
-			<div class="item" data-value="asc">${properties['ascendingLabel']}</div>
-			<div class="item" data-value="desc">${properties['descendingLabel']}</div>
-		</div>
-	</div>
+	<select class="ui dropdown cmp-search-sort__select"
+			type="hidden"
+			name="orderby"
+			id="${predicate.id}__order-by"
+			form="${predicate.formId}"
+			data-asset-share-id="sort"
+			data-asset-share-search-actions="all"
+			data-asset-share-search-on="${predicate.autoSearch ? 'change' : ''}">
+
+		<option value=""></option>
+		<sly data-sly-list.optionItem="${predicate.sortByItems}">
+			<option value="${optionItem.value}"
+					selected="${optionItem.selected ? 'selected' : ''}">
+				${optionItem.text}
+			</option>
+		</sly>
+	</select>
+
+	<select class="ui compact dropdown cmp-search-sort__select"
+			type="hidden"
+			name="orderby.sort"
+			id="${predicate.id}__order-by-direction"
+			form="${predicate.formId}"
+			data-asset-share-id="sort"
+			data-asset-share-search-actions="all"
+			data-asset-share-search-on="${predicate.autoSearch ? 'change' : ''}">
+
+		<sly data-sly-list.optionItem="${predicate.sortByDirectionItems}">
+			<option value="${optionItem.value}"
+					selected="${optionItem.selected ? 'selected' : ''}">
+				${optionItem.text}
+			</option>
+		</sly>
+	</select>
 
 </sly>
 <sly data-sly-call="${placeholderTemplate.placeholder @ isEmpty=!ready}"></sly>
