--- a/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/search/sort/sort.html
+++ b/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/search/sort/sort.html
@@ -20,36 +20,38 @@
 	 data-sly-use.placeholderTemplate="core/wcm/components/commons/v1/templates.html"
 	 data-sly-test.ready="${predicate.ready}">
 
-	<div class="ui dropdown">
+	<div class="ui dropdown cmp-search-sort__selection cmp-search-sort__selection--sort-by">
 		<input
 				type="hidden"
 				name="orderby"
+				class="cmp-search-sort__selection-input"
 				form="${predicate.formId}"
 				data-asset-share-id="sort"
 				data-asset-share-search-actions="all"
 				data-asset-share-search-on="${predicate.autoSearch ? 'change' : ''}"
 				data-sly-list.item="${predicate.items}"/>
-		<i class="dropdown icon"></i>
-		<div class="text">${predicate.orderByLabel}</div>
-		<div class="menu"
+		<i class="dropdown icon cmp-search-sort__selection-icon"></i>
+		<div class="text cmp-search-sort__selection-text">${predicate.orderByLabel}</div>
+		<div class="menu cmp-search-sort__selection-items"
 			 data-sly-list.item="${predicate.items}">
-			<div class="item ${item.selected ? 'selected' : ''}" data-value="${item.value}">${item.text}</div>
+			<div class="item ${item.selected ? 'selected' : ''} cmp-search-sort__selection-item" data-value="${item.value}">${item.text}</div>
 		</div>
 	</div>
 
-	<div class="ui dropdown">
+	<div class="ui dropdown cmp-search-sort__selection cmp-search-sort__selection--sort-direction">
 		<input
 				type="hidden"
 				name="orderby.sort"
+				class="cmp-search-sort__selection-input"
 				form="${predicate.formId}"
 				data-asset-share-id="sort"
 				data-asset-share-search-actions="all"
 				data-asset-share-search-on="${predicate.autoSearch ? 'change' : ''}"/>
-		<i class="dropdown icon"></i>
-		<div class="text">${predicate.orderBySortLabel}</div>
-		<div class="menu">
-			<div class="item ${predicate.ascending ? 'selected' : ''}" data-value="asc">${properties['ascendingLabel']}</div>
-			<div class="item ${predicate.ascending ? '' : 'selected'}" data-value="desc">${properties['descendingLabel']}</div>
+		<i class="dropdown icon cmp-search-sort__selection-icon"></i>
+		<div class="text cmp-search-sort__selection-text">${predicate.orderBySortLabel}</div>
+		<div class="menu cmp-search-sort__selection-items">
+			<div class="item ${predicate.ascending ? 'selected' : ''} cmp-search-sort__selection-item" data-value="asc">${properties['ascendingLabel']}</div>
+			<div class="item ${predicate.ascending ? '' : 'selected'} cmp-search-sort__selection-item" data-value="desc">${properties['descendingLabel']}</div>
 		</div>
 	</div>
 
