--- a/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/search/filter-toggle/filter-toggle.html
+++ b/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/search/filter-toggle/filter-toggle.html
@@ -20,22 +20,24 @@
      data-sly-test.pagePredicate="${modelCache['com.adobe.aem.commons.assetshare.components.predicates.PagePredicate']}"
      data-sly-test.hideLabels="${properties['hideLabels']}"></sly>
 
-<div class="ui basic segment">
+<div class="ui basic segment cmp-search-filter-toggle__wrapper">
     <div class="ui column grid">
-        <div class="eight wide column">
+        <div class="eight wide column cmp-search-filter-toggle__toggle cmp-search-filter-toggle__toggle--apply">
             <button type="submit"
                     form="${pagePredicate.formId}"
-                    class="ui icon fluid button ${hideLabels ? '' : 'labeled'}">
-                <i class=" filter icon"></i>
-                <span data-sly-test="${!hideLabels}">${properties['applyFilterLabel']}</span>
+                    class="ui icon fluid button cmp-search-filter-toggle__button ${hideLabels ? '' : 'labeled'}">
+                <i class="filter icon cmp-search-filter-toggle__icon"></i>
+                <span class="cmp-search-filter-toggle__text"
+                      data-sly-test="${!hideLabels}">${properties['applyFilterLabel']}</span>
             </button>
         </div>
 
-        <div class="eight wide column">
-            <a class="ui icon fluid button ${hideLabels ? '' : 'labeled'}"
+        <div class="eight wide column cmp-search-filter-toggle__toggle cmp-search-filter-toggle__toggle--reset">
+            <a class="ui icon fluid button cmp-search-filter-toggle__button ${hideLabels ? '' : 'labeled'}"
                href="${currentPage.path @ extension = 'html'}">
-                <i class="undo icon"></i>
-                <span data-sly-test="${!hideLabels}">${properties['resetFilterLabel']}</span>
+                <i class="undo icon cmp-search-filter-toggle__icon"></i>
+                <span class="cmp-search-filter-toggle__text"
+                      data-sly-test="${!hideLabels}">${properties['resetFilterLabel']}</span>
             </a>
         </div>
     </div>
