ui.tests - Results

--- a/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/search/results/result/templates/common.html
+++ b/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/search/results/result/templates/common.html
@@ -56,7 +56,7 @@
         <sly data-sly-test="${search.results.more}">
             <br/><br/>
             <button data-asset-share-id="${properties['infiniteLoadMore'] ? 'infinite-load-more' : 'load-more'}"
-                    class="fluid ui button">${properties['loadMoreLabel']}</button>
+                    class="fluid ui button cmp-search-results__load-more">${properties['loadMoreLabel']}</button>
         </sly>
     </div>
 </template>
