--- a/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/search/filter-toggle/templates/toggles.html
+++ b/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/search/filter-toggle/templates/toggles.html
@@ -19,16 +19,18 @@
 <template data-sly-template.apply="${@ label, hideLabels, pagePredicate}">
     <button type="submit"
             form="${pagePredicate.formId}"
-            class="ui icon fluid button ${hideLabels ? '' : 'labeled'}">
-        <i class=" filter icon"></i>
-        <span data-sly-test="${!hideLabels}">${properties['applyFilterLabel']}</span>
+            class="ui icon fluid button ${hideLabels ? '' : 'labeled'} cmp-search-filter-toggle__button">
+        <i class=" filter icon cmp-search-filter-toggle__icon"></i>
+        <span class="cmp-search-filter-toggle__text"
+                data-sly-test="${!hideLabels}">${properties['applyFilterLabel']}</span>
     </button>
 </template>
 
 <template data-sly-template.reset="${@ label, hideLabels, currentPage}">
-    <a class="ui icon fluid button ${hideLabels ? '' : 'labeled'}"
+    <a class="ui icon fluid button ${hideLabels ? '' : 'labeled'} cmp-search-filter-toggle__button"
        href="${currentPage.path @ extension = 'html'}">
-        <i class="undo icon"></i>
-        <span data-sly-test="${!hideLabels}">${properties['resetFilterLabel']}</span>
+        <i class="undo icon cmp-search-filter-toggle__icon"></i>
+        <span class="cmp-search-filter-toggle__text"
+                data-sly-test="${!hideLabels}">${properties['resetFilterLabel']}</span>
     </a>
 </template>
