--- a/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/search/date-range/templates/options.html
+++ b/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/search/date-range/templates/options.html
@@ -24,7 +24,7 @@
             <div class="ui input left icon">
                 <i class="calendar icon"></i>
                 <input type="text"
-                       placeholder="${properties['startPlaceholder']}"
+                       placeholder="${predicate.startPlaceholder}"
                        name="${predicate.group}.${predicate.lowerBoundName}"
                        value="${predicate.initialLowerBound}"
                        form="${predicate.formId}"
@@ -38,7 +38,7 @@
             <div class="ui input left icon">
                 <i class="calendar icon"></i>
                 <input type="text"
-                       placeholder="${properties['endPlaceholder']}"
+                       placeholder="${predicate.endPlaceholder}"
                        name="${predicate.group}.${predicate.upperBoundName}"
                        value="${predicate.initialUpperBound}"
                        form="${predicate.formId}"
